# Labo5_GEN_c-_refactor

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Customer.cpp  Movie.cpp  Movie.h  PriceCode.h  Rental.h  main.cpp
src/testing/: MockPriceCode.h  mock_Movie.h
test/: CMakeLists.txt  TestCalcul.cpp  TestCustomer.cpp
